--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,51 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
-
+.container{
+  background-color: rgb(226, 203, 159);
+  text-align: center;
+  
+}
+table{
+  margin: 0 auto;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+td{
+  padding: 30px;
+  border-top: solid 1px black;
+  border-bottom: solid 1px black;
+}
+
+.form{
+  padding: 15px;
+}
+
+.studentinput{
+  margin-right: 30px;
+}
+
+input{
+  width: 300px;
+  height: 50px;
+}
+
+.input{
+  width: 50px;
+  background-color: rgb(189, 99, 117);
+}
+
+select{
+  width: 200px;
+  height: 50px;
+  font-weight: bold;
+}
+
+.name{
+  font-size: 30px;
 }
